Adding beamer setup file and LICENSE.

--- a/README.org
+++ b/README.org
@@ -1,16 +1,18 @@
 #+options: toc:nil num:nil ^:{} broken-links:t
 #+title:Readme
 
-* The target audience
+** The target audience
 This presentation was created for a Linux User Group and so is intended for a technically literate audience.
 
-It's intended to illustrate why someone might be interested in adopting a new protocol, the range of pages and tools already available, and links to interesting page, and to the Gemini home and Quickstart 
+It's intended to illustrate why someone might be interested in adopting a new protocol, the range of pages and tools already available, and links to interesting page, and to the Gemini home and Quickstart.
 
-When presenting this, I already had open:
-  - the Lagrange Gemini browser with a dozen+ tabs open 
+There aren't many images in the presentation. Instead, when presenting this, I already had open:
+  - the Lagrange Gemini browser with a dozen+ tabs open
+  - a web browser preloaded to the gemini 'available
+    software' page, and showing post with #gemini tag on 
+    Mastodon.
 
-  - a web browser preloaded to the gemini 'available software' page, and showing
-  Mastodon with #gemini tag filter makes it clear there's lots going on ...
+Both make it clear there's lots going on ...
 
 This makes it easy so swap from the presentation and illustrate the diversity of what can be found in the Gemini ecosystem.
 
@@ -32,8 +34,8 @@ If you've never used Emacs or Latex before, this might be a stretch, so I've inc
 ** Credits
 I've adapted sections of the Gemini Documentation and FAQ from https://gemini.circumlunar.space. Many thanks.
 
-* Footnotes
+** Footnotes
 
-[fn:1] On Ubuntu 
-: sudo apt install emacs texlive-full
-The full version of texlive probably isn't necessary but once it's installed, there won't be any missing packages.
+[fn:1] On Ubuntu or Debian: =sudo apt install emacs texlive-full=
+
+The full version of texlive probably isn't necessary but once it's installed, there won't be any problems with missing packages.
