Export index.org -> index.html

--- a/index.org
+++ b/index.org
@@ -1,14 +1,20 @@
-#+title: An introduction to the Gemini ecosystem
+#+html_head: <style> body {max-width:40em;margin-left:auto;margin-right:auto}</style>
+#+html_head: <style> h1, h2, h3 {color: #0055aa; font-family:sans-serif </style>
 
-** About
+#+options: toc:nil num:nil date:nil author:nil validation:nil
+
+#+title: An Introduction to the Gemini ecosystem
+
+** Gemini
 This presentation introduces the new Gemini protocol (https://gemini.circumlunar.space). It was created for a Linux User Group and so is intended for a technical audience.
 
-Why someone might be interested in a new protocol that's intentionally more limited than HTML/HTTP. It outlines the range of pages and tools already available, and has links to interesting pages, to the Gemini home, and to a very good getting started page (http://geminiquickst.art).
+It introduces Gemini and why someone might be interested in a new protocol that's intentionally more limited than HTML/HTTP. It outlines the range of pages and tools already available, and has links to interesting pages, to the Gemini home, and to a very good getting started page (http://geminiquickst.art).
 
-** The presentation 
-- [[file:gemini-intro-No-animation.pdf]] - without staged 'on-click' reveals
-- [[file:gemini-intro.pdf]] - with the progressive reveal.
+** The presentation - two options
+- [[file:gemini-intro.pdf]] - with the 'on-click' progressive reveal
+- [[file:gemini-intro-No-animation.pdf]] - without progressive reveals
 
+** The repository 
 The repository for this presentation is 
  - https://github.com/GiovanniMoretti/Gemini-intro
 
