--- a/beamer-presentation-setup.org
+++ b/beamer-presentation-setup.org
@@ -49,16 +49,16 @@
 
 # +BEAMER_THEME: AnnArbor (but double height footer)   
 # +BEAMER_THEME: Berlin
-# +BEAMER_THEME: Boadilla
+#+BEAMER_THEME: Boadilla
 # +BEAMER_THEME: CambridgeUS
 # +BEAMER_THEME: Dresden
-#+BEAMER_THEME: Frankfurt
+# +BEAMER_THEME: Frankfurt
 # +BEAMER_THEME: Madrid
 # +BEAMER_THEME: Montpellier
 
-# beamer_color_theme: beaver
-# +BEAMER_COLOR_THEME: rose
-#+beamer_color_theme: orchid
+# +beamer_color_theme: beaver
+#+BEAMER_COLOR_THEME: rose
+# +beamer_color_theme: orchid
 
 #+BEAMER_HEADER: \AtBeginSection{\frame{\sectionpage}}
 
