--- a/index.org
+++ b/index.org
@@ -10,9 +10,14 @@ This presentation introduces the new Gemini protocol (https://gemini.circumlunar
 
 It introduces Gemini and why someone might be interested in a new protocol that's intentionally more limited than HTML/HTTP. It outlines the range of pages and tools already available, and has links to interesting pages, to the Gemini home, and to a very good getting started page (http://geminiquickst.art).
 
-** The presentation - two options
-- [[file:gemini-intro.pdf]] - with the 'on-click' progressive reveal
-- [[file:gemini-intro-No-animation.pdf]] - without progressive reveals
+** There are two version of the talk
+The longer one is the longer original version and a more concise later version.
+*** Longer presentation - two options
+ - [[file:gemini-intro.pdf]] - with the 'on-click' progressive reveal
+ - [[file:gemini-intro-No-animation.pdf]] - without progressive reveals
+
+*** And a shorter 'flash-talk' version 
+ - [[file:gemini-flash-talk.pdf]] - with the 'on-click' progressive reveal
 
 ** The repository 
 The repository for this presentation is 
